Add release date for v0.17.0

--- a/notes/0.17.0.markdown
+++ b/notes/0.17.0.markdown
@@ -59,3 +59,5 @@
 [#44]: https://github.com/ovotech/fs2-kafka/pull/44
 [#45]: https://github.com/ovotech/fs2-kafka/pull/45
 [#46]: https://github.com/ovotech/fs2-kafka/pull/46
+
+Released on 2018-12-03.
