Add documentation overview

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -7,6 +7,9 @@
     "docs": {
       "overview": {
         "title": "Overview"
+      },
+      "quick-example": {
+        "title": "Quick Example"
       }
     },
     "links": {
