Add link to API docs to site

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -13,6 +13,7 @@
       }
     },
     "links": {
+      "API Docs": "API Docs",
       "Documentation": "Documentation",
       "GitHub": "GitHub"
     },
