Add release date for v0.17.2

--- a/notes/0.17.2.markdown
+++ b/notes/0.17.2.markdown
@@ -25,3 +25,5 @@
 [#56]: https://github.com/ovotech/fs2-kafka/pull/56
 [#57]: https://github.com/ovotech/fs2-kafka/pull/57
 [#58]: https://github.com/ovotech/fs2-kafka/pull/58
+
+Released on 2018-12-10.
