Add release date for v0.19.1

--- a/notes/0.19.1.markdown
+++ b/notes/0.19.1.markdown
@@ -6,3 +6,5 @@
 
 [#80]: https://github.com/ovotech/fs2-kafka/pull/80
 [#81]: https://github.com/ovotech/fs2-kafka/pull/81
+
+Released on 2019-01-29.
