Move backpressure explanation to site

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -10,6 +10,9 @@
       },
       "quick-example": {
         "title": "Quick Example"
+      },
+      "technical-details": {
+        "title": "Technical Details"
       }
     },
     "links": {
