--- a/notes/0.19.4.markdown
+++ b/notes/0.19.4.markdown
@@ -4,7 +4,7 @@
   - Add `Deserializer#option`, and `Deserializer.option` and `unit`.
   - Add `HeaderDeserializer#option`, and `HeaderDeserializer.option` and `unit`.
   - Add `Serializer#option`, and `Serializer.option`, `asNull`, `empty` and `unit`.
-  - Add `HeaderSerializer#option`, and `Serializer.option`, `asNull`, `empty` and `unit`.
+  - Add `HeaderSerializer#option`, and `HeaderSerializer.option`, `asNull`, `empty` and `unit`.
 
 [#96]: https://github.com/ovotech/fs2-kafka/pull/96
 [#97]: https://github.com/ovotech/fs2-kafka/pull/97
