Add release date for v0.19.6

--- a/notes/0.19.6.markdown
+++ b/notes/0.19.6.markdown
@@ -3,3 +3,5 @@
 
 [#105]: https://github.com/ovotech/fs2-kafka/pull/105
 [#106]: https://github.com/ovotech/fs2-kafka/pull/106
+
+Released on 2019-03-28.
