--- a/notes/0.19.9.markdown
+++ b/notes/0.19.9.markdown
@@ -3,3 +3,5 @@
 - Change to handle commits during rebalancing. Thanks [@CremboC](https://github.com/CremboC)! ([#117][#117])
 
 [#117]: https://github.com/ovotech/fs2-kafka/pull/117
+
+Released on 2019-04-03.
