Add initial fs2-kafka-vulcan module

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -8,6 +8,9 @@
       "consumers": {
         "title": "Consumers"
       },
+      "modules": {
+        "title": "Modules"
+      },
       "overview": {
         "title": "Overview"
       },
