Add producers and transactions documentation

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -11,11 +11,17 @@
       "overview": {
         "title": "Overview"
       },
+      "producers": {
+        "title": "Producers"
+      },
       "quick-example": {
         "title": "Quick Example"
       },
       "technical-details": {
         "title": "Technical Details"
+      },
+      "transactions": {
+        "title": "Transactions"
       }
     },
     "links": {
