Add release date for v0.20.0-M1

--- a/notes/0.20.0-M1.markdown
+++ b/notes/0.20.0-M1.markdown
@@ -89,3 +89,5 @@ Note binary- and source-compatibility is not guaranteed between milestone releas
 [#152]: https://github.com/ovotech/fs2-kafka/pull/152
 [#153]: https://github.com/ovotech/fs2-kafka/pull/153
 [#154]: https://github.com/ovotech/fs2-kafka/pull/154
+
+Released on 2019-07-04.
