--- a/notes/0.20.0-M2.markdown
+++ b/notes/0.20.0-M2.markdown
@@ -3,3 +3,5 @@
 - Add [`fs2-kafka-vulcan`](https://ovotech.github.io/fs2-kafka/docs/modules#vulcan) for integration with [vulcan](https://ovotech.github.io/vulcan). ([#156][#156])
 
 [#156]: https://github.com/ovotech/fs2-kafka/pull/156
+
+Released on 2019-07-12.
