Add the admin documentation page to the sidebar

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -5,6 +5,9 @@
     "previous": "Previous",
     "tagline": "Functional Kafka Streams for Scala",
     "docs": {
+      "admin": {
+        "title": "Admin"
+      },
       "consumers": {
         "title": "Consumers"
       },
