Add release date for v0.20.1

--- a/notes/0.20.1.markdown
+++ b/notes/0.20.1.markdown
@@ -14,3 +14,5 @@
 [#213]: https://github.com/ovotech/fs2-kafka/pull/213
 [#214]: https://github.com/ovotech/fs2-kafka/pull/214
 [#215]: https://github.com/ovotech/fs2-kafka/pull/215
+
+Released on 2019-09-19.
