Publish certs docs

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -28,6 +28,9 @@
       },
       "transactions": {
         "title": "Transactions"
+      },
+      "certificates": {
+        "title": "Certificates"
       }
     },
     "links": {
